# python_code_interpreter

./: .env.sample  .gitignore  .gitmodules  AGENTS.md  README.md  mcp_client_manager.py  pyproject.toml  python_code_interpreter.py  python_code_notebook.py  requirements.txt
sample_data/: diagnosis.csv
sample_results/: sample_01.ipynb  sample_01.json  sample_02.ipynb  sample_02.json  sample_03.ipynb  sample_03.json  sample_04.ipynb  sample_04.json  sqlite3_gpt-4.1.ipynb  sqlite3_grok-3.ipynb  sqlite3_o4-mini.ipynb
