[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycodei"
version = "0.1.9"
description = "The agent is designed to run Python code in a notebook environment, enabling data analysis, machine learning, inference, and visualization."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Kentaro Aoki"}
]
dependencies = [
  "anyio",
  "ipykernel",
  "jupyter",
  "matplotlib",
  "mcp",
  "nbformat",
  "numpy",
  "openai",
  "pandas",
  "papermill==2.6.0",
  "python-dotenv",
  "requests",
  "scikit-learn",
  "seaborn",
  "colorama",
  "rich",
  "pyfiglet",
  "prompt_toolkit"
]

[project.urls]
Homepage = "https://github.com/KentaroAOKI/pycodei"

[project.scripts]
pycodei = "python_code_interpreter:main"

[tool.setuptools]
py-modules = [
  "mcp_client_manager",
  "python_code_interpreter",
  "python_code_notebook",
]

[tool.setuptools.packages.find]
include = ["papermill_enhancement*"]
